--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-gtag": "^4.17.0",
     "gatsby-plugin-google-tagmanager": "^4.17.0",
+    "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-offline": "^5.17.0",
     "gatsby-plugin-postcss": "^5.17.0",
